--- a/verify.html
+++ b/verify.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="1.5;url=index.html">
+  <meta http-equiv="refresh" content="1.5;url=home.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Verifying</title>
   <style>
