--- a/404.html
+++ b/404.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <script>
-      // Redirect after 2 seconds
+    <script>s
       setTimeout(function() {
         window.location.href = "https://juju.wtf";
-      }, 2000);
+      }, 1200);
     </script>
     <style>
       body {
